--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -4017,7 +4017,10 @@ variable \(y\) and an \emph{explanatory} or \emph{independent} variable
 collection of independent observations on \(x\) and \(y\), i.e., a
 \emph{dataset}.
 
-\section{Data on Cars}\label{data-on-cars}
+\section{\texorpdfstring{How are \texttt{x} and \texttt{y}
+related?}{How are x and y related?}}\label{how-are-x-and-y-related}
+
+\subsection{Data on Cars}\label{data-on-cars}
 
 We will look at the built-in \texttt{cars} dataset. Let's get a view of
 this by just typing \texttt{View(cars)} in Rstudio. You can see
@@ -4267,8 +4270,7 @@ explainers by typing
 \end{Highlighting}
 \end{Shaded}
 
-\subsection{Ordinary Least Squares (OLS)
-Estimator}\label{ordinary-least-squares-ols-estimator}
+\section{Ordinary Least Squares (OLS) Estimator}\label{OLS}
 
 The method to compute (or \emph{estimate}) \(b_0\) and \(b_1\) we
 illustrated above is called \emph{Ordinary Least Squares}, or OLS.
@@ -4301,10 +4303,8 @@ a line as in \(y = b_0 + b_1 x\),
   would measure the effect of an additional year of education on wages.
 \end{itemize}
 
-\subsection{Particular Cases of Linear
-Regression}\label{particular-cases-of-linear-regression}
-
-\subsubsection{No Regressor}\label{no-regressor}
+\subsection{Linear Regression without
+Regressor}\label{linear-regression-without-regressor}
 
 There are several important special cases for the linear regression
 introduced above. Let's start with the most obvious one: What is the
@@ -4328,7 +4328,8 @@ Least Squares \textbf{without regressor} \(x\) estimates the sample mean
 of the outcome variable \(y\), i.e.~it produces \(\overline{y}\).
 \end{tip}
 
-\subsubsection{No Intercept}\label{no-intercept}
+\subsection{Regression without an
+Intercept}\label{regression-without-an-intercept}
 
 We follow the same logic here, just that we miss another bit from our
 initial equation and the minimisation problem in \eqref{eq:ols-min} now
@@ -4359,7 +4360,7 @@ with
 \end{Highlighting}
 \end{Shaded}
 
-\subsubsection{Centering A Regression}\label{centering-a-regression}
+\subsection{Centering A Regression}\label{centering-a-regression}
 
 By \emph{centering} or \emph{demeaning} a regression, we mean to
 substract from both \(y\) and \(x\) their respective averages to obtain
@@ -4394,7 +4395,7 @@ now by yourself by typing:
 \end{Highlighting}
 \end{Shaded}
 
-\subsubsection{Standardizing A
+\subsection{Standardizing A
 Regression}\label{standardizing-a-regression}
 
 \emph{Standardizing} a variable \(z\) means to demean as above, but in
@@ -4428,7 +4429,7 @@ type this and play around with the app for a little while!
 \end{Highlighting}
 \end{Shaded}
 
-\subsection{Predictions and Residuals}\label{predictions-and-residuals}
+\section{Predictions and Residuals}\label{predictions-and-residuals}
 
 Now we want to ask how our residuals \(e_i\) relate to the prediction
 \(\hat{y_i}\). Let us first think about the average of all predictions
@@ -4489,7 +4490,7 @@ that
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  The average of \(\hat{y_i}\) to be the same as the mean of \(y\)
+  The average of \(\hat{y}_i\) to be the same as the mean of \(y\)
 \item
   The average of the errors should be zero.
 \item
@@ -4531,7 +4532,7 @@ that
 
 So indeed we can confirm this result with our test dataset. Great!
 
-\subsection{Correlation, Covariance and
+\section{Correlation, Covariance and
 Linearity}\label{correlation-covariance-and-linearity}
 
 It is important to keep in mind that Correlation and Covariance relate
@@ -4613,7 +4614,7 @@ performs:
 \caption{Better line with non-linear data!}\label{fig:non-line-cars-ols2}
 \end{figure}
 
-\subsection{\texorpdfstring{Assessing the \emph{Goodness of
+\section{\texorpdfstring{Assessing the \emph{Goodness of
 Fit}}{Assessing the Goodness of Fit}}\label{assessing-the-goodness-of-fit}
 
 In our simple setup, there exists a convenient measure for how good a
@@ -4771,7 +4772,7 @@ Can you spot a trend in the data? According to you, what would the line
 of best fit look like? Would it be upward or downward slopping? Let's
 ask \texttt{R}!
 
-\section{\texorpdfstring{The \texttt{lm()}
+\subsection{\texorpdfstring{The \texttt{lm()}
 function}{The lm() function}}\label{the-lm-function}
 
 We will use the built-in \texttt{lm()} function to estimate the
